@@ -101,10 +101,9 @@ CREATE TABLE `category` (\n
   `base_category_uid` BIGINT UNSIGNED default \'0\',\n
   `category_strict_membership` tinyint(1) default \'0\',\n
   KEY `uid` (`uid`),\n
-  KEY `category_strict_membership` (`category_strict_membership`),\n
   KEY `Membership` (`category_uid`,`base_category_uid`),\n
-  KEY `FuzzyMembership` (`category_uid`)\n
 ) TYPE = InnoDB; \n
+\n
 </string> </value>
         </item>
         <item>
@@ -149,10 +148,9 @@ CREATE TABLE `category` (\n
   `base_category_uid` BIGINT UNSIGNED default \'0\',\n
   `category_strict_membership` tinyint(1) default \'0\',\n
   KEY `uid` (`uid`),\n
-  KEY `category_strict_membership` (`category_strict_membership`),\n
   KEY `Membership` (`category_uid`,`base_category_uid`),\n
-  KEY `FuzzyMembership` (`category_uid`)\n
 ) TYPE = InnoDB; \n
+\n
 </string> </value>
                     </item>
                   </dictionary>
